--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "recyclesmart-desktop-windows",
   "version": "1.0.0",
-  "main": "mainjs",
+  "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
