--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
   "name": "RecycleSMART",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
     "build": "electron-builder",
     "dist": "electron-builder --win"
   },
-  "devDependencies": {
-    "electron": "^22.0.0",
-    "electron-builder": "^22.9.1"
-  },
   "build": {
     "appId": "com.sharktide.recyclesmart",
-    "productName": "RecycleSMART Desktop windows",
+    "productName": "RecycleSMART Windows",
     "files": [
       "**/*",
       "dist/**/*",
@@ -27,20 +23,19 @@
     },
     "win": {
       "target": "nsis"
-    },
-    "mac": {
-      "target": "dmg"
-    },
-    "publish": {
-      "provider": "github",
-      "owner": "sharktide",
-      "repo": "recyclesmart-desktop-windows",
-      "vPrefixed": true,
-      "channel": "latest"
     }
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "child_process": "^1.0.2",
     "electron-log": "^5.2.4",
-    "electron-updater": "^6.3.9"
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
+    "os": "^0.1.2",
+    "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "electron": "^33.2.1",
+    "electron-builder": "^25.1.8"
   }
 }
