--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "RecycleSMART",
-  "version": "1.0.2",
+  "name": "RecycleAI",
+  "version": "1.1.1",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
@@ -8,8 +8,8 @@
     "dist": "electron-builder --win"
   },
   "build": {
-    "appId": "com.sharktide.recyclesmart",
-    "productName": "RecycleSMART Windows",
+    "appId": "com.sharktide.RecycleAI",
+    "productName": "RecycleAI Windows",
     "files": [
       "**/*",
       "dist/**/*",
